--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
       <div class="container">
         <div class="row">
           <div class="col-4 col-sm-3 col-md-2 align-self-center">
-            <a href="#"><img src="img/logo.png" class="img-fluid" alt="Logo" /></a>
+            <a href="#"><img src="img/logo.png" class="img-fluid" alt="Logo"></a>
           </div>
           <div class="col">
             <h1>NuCamp</h1>
             <h2>a better way to camp</h2>
           </div>
           <div class="col-md-4 col-xl-2 mt-4">
-            <a href="#reserveForm" class="btn btn-info btn-lg">Reserve Campsite</a>
+            <a href="#reserveForm" class="btn btn-info btn-lg" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite</a>
           </div>
         </div>
       </div>
@@ -205,5 +205,12 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- Custom JS -->
+    <script>
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+      })
+    </script>
+
   </body>
 </html>
