--- a/index.html
+++ b/index.html
@@ -38,11 +38,66 @@
             <h2>a better way to camp</h2>
           </div>
           <div class="col-md-4 col-xl-2 mt-4">
-            <a href="#reserveForm" class="btn btn-info btn-lg" data-toggle="tooltip" data-placement="bottom" data-html="true" title="Or call us at <br /><strong>1-206-555-1234</strong>">Reserve Campsite</a>
+            <a class="btn btn-info btn-lg" data-toggle="modal" data-target="#reserveModal">Reserve Campsite</a>
           </div>
         </div>
       </div>
     </header>
+    <div id="reserveModal" class="modal fade" role="dialog">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header bg-info text-white">
+            <h3 class="modal-title">Reserve a Campsite</h3>
+            <button class="close" type="button" data-dismiss="modal">&times;</button>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+              <form>
+                <div class="row form-group">
+                  <label class="col-sm-6 col-form-label" for="numCampers">Number of Campers
+                  </label>
+                  <div class="col">
+                    <select class="form-control" name="numCampers" id="numCampers">
+                      <option value="">Select...</option>
+                      <option value="1">1</option>
+                      <option value="2">2</option>
+                      <option value="3">3</option>
+                      <option value="4">4</option>
+                      <option value="5">5</option>
+                      <option value="6">6</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="row form-group">
+                  <label class="col-sm-6 col-form-label" for="date">Date
+                  </label>
+                  <div class="col-sm-6">
+                    <input class="form-control" type="date" id="date" name="date" placeholder="" />
+                  </div>
+                </div>
+                <div class="row form-group">
+                  <label for="siteType" class="col-sm-6 col-form-label">Campsite Type</label>
+                  <div class="col-2 btn-group btn-group-toggle" data-toggle="buttons">
+                    <label class="btn btn-success">
+                      <input type="radio" name="siteType" id="siteTent" value="Tent" autocomplete="off" checked>Tent
+                    </label>
+                    <label class="btn btn-primary active">
+                      <input type="radio" name="siteType" id="siteRV" value="RV" autocomplete="off" checked>RV
+                    </label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col">
+                    <button type="submit" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Search</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- navigation -->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
@@ -221,44 +276,6 @@
         </div>
       </div>
 
-      <div class="row row-content">
-        <div class="col-sm-6 mx-auto">
-          <div class="card">
-            <h3 class="card-header bg-info text-white">Reserve a Campsite</h3>
-            <div class="card-body">
-              <form action="" id="reserveForm" class="">
-                <div class="row form-group">
-                  <label class="col-sm-6 col-form-label" for="numCampers">Number of Campers
-                  </label>
-                  <div class="col">
-                    <select class="form-control" name="numCampers" id="numCampers">
-                      <option value="">Select...</option>
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                      <option value="6">6</option>
-                    </select>
-                  </div>
-                </div>
-                <div class="row form-group">
-                  <label class="col-sm-6 col-form-label" for="date">Date
-                  </label>
-                  <div class="col-sm-6">
-                    <input class="form-control" type="date" id="date" name="date" placeholder="" />
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col">
-                    <button type="submit" class="btn btn-primary">Search</button>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
 
     <footer class="site-footer">
@@ -293,11 +310,5 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- Custom JS -->
-    <script>
-      $(function () {
-        $('[data-toggle="tooltip"]').tooltip()
-      })
-    </script>
-
   </body>
 </html>
