--- a/contactus.html
+++ b/contactus.html
@@ -6,15 +6,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- build:css css/main.css -->
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-
-    <!-- Additional CSS must be placed after Bootstrap CSS -->
+    
+    <!-- Font awesome link -->
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <!-- Bootstrap Social -->
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="/css/style.css" />
+    <!-- endbuild -->
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-    <link rel="stylesheet" href="css/style.css" />
+    
 
     <title>NuCamp: A Better Way To Camp</title>
 </head>
