--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags always come first -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <!-- build:css css/main.css -->
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -16,13 +16,17 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <!-- Bootstrap Social -->
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="/css/style.css" />
+    <!-- endbuild -->
+
     <!-- additional css must be after bootstrap -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    
     <title>NuCamp: A Better Way To Camp</title>
   </head>
 
